# -*- python -*-

# This file exists to make our directory into a Bazel package, so that our
# neighboring *.bzl file can be loaded elsewhere.

load("//tools/lint:lint.bzl", "add_lint_tests")

exports_files(
    ["amalgamator.py"],
    visibility = ["@eigen_internal//:__pkg__"],
)

add_lint_tests(python_lint_extra_srcs = ["amalgamator.py"])
