# -*- bazel -*-

# This file is only used in cases when we need to build and/or install fmt from
# source, i.e., when we are not using pkg-config.  See repository.bzl for the
# logic to select when that occurs.

load("@drake//tools/install:install.bzl", "install")

licenses(["notice"])  # MIT

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fmt",
    srcs = [
        "src/format.cc",
        "src/os.cc",
    ],
    hdrs = glob(["include/fmt/*.h"]),
    includes = ["include"],
)

install(
    name = "install",
    docs = ["LICENSE.rst"],
)
