load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_py.bzl", "drake_py_test", "drake_py_unittest")

exports_files(
    [
        "lcm-config.cmake",
        "lcm-config-version.cmake",
        "test/lcm-gen_install_test.py",
    ],
    visibility = ["@lcm//:__pkg__"],
)

drake_py_test(
    name = "import_lcm_test",
    # TODO(jwnimmer-tri) Port this to drake_py_unittest.
    allow_import_unittest = True,
    deps = ["@lcm//:lcm-python"],
)

drake_py_unittest(
    name = "no_lcm_warnings_test",
    deps = ["@lcm//:lcm-python"],
)

add_lint_tests(python_lint_extra_srcs = ["test/lcm-gen_install_test.py"])
